--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "sql": "^0.78.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
